update giturl to gitlab repo
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = parley
 url = https://download.kde.org/stable/release-service/20.04.2/src/parley-20.04.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/parley.git
+giturl = https://invent.kde.org/education/parley.git
 domain = 
 alias = 
 
